--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
 
             <div class="newshub_footer_footer">&copy;2024 Bản quyền thuộc về NEWSHub</div>
         </footer>
+        <button class="goTop" id="goTopBtn"><i class="fa-solid fa-arrow-up"></i></button>
         <script src="./js/main.js" type="text/javascript"></script>
     </div>
 </body>
