--- a/readNews.html
+++ b/readNews.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="./image/background/logo.png">
     <link rel="stylesheet" href="./css/reponsive.css">
     <link rel="stylesheet" href="./css/read.css">
-    <title>NEWSHub</title>
+    <title>NEWSHub>read</title>
     <script src="./js/data.js" type="text/javascript"></script>
 </head>
 <body>
@@ -456,6 +456,7 @@
 
             <div class="newshub_footer_footer">&copy;2024 Bản quyền thuộc về NEWSHub</div>
         </footer>
+        <button class="goTop" id="goTopBtn"><i class="fa-solid fa-arrow-up"></i></button>
     </div>
     <script src="./js/read.js" type="text/javascript"></script>
     <script src="./js/main.js" type="text/javascript"></script>
