--- a/search.html
+++ b/search.html
@@ -233,64 +233,31 @@
                                 <h3>Tìm kiếm</h3>
                                 <div class="search_holder">
                                     <input id="input" class="data_input" type="search" placeholder="Tìm kiếm">
-                                    <button ip="btnSearch" class="glass">
+                                    <button id="btnSearch" class="glass">
                                         <i class="fa-solid fa-magnifying-glass"></i>
                                     </button>
                                 </div>
                                 <p>Chuyên mục</p>
                                 <div class="dropdown">
                                     <select class="select_holder" name="" id="select">
-                                        <option value="">Tất cả</option>
-                                        <option value="Thời sự">Thời sự</option>
-                                        <option value="Thế giới">Thế giới</option>
-                                        <option value="Kinh doanh">Kinh doanh</option>
-                                        <option value="Pháp luật">Pháp luật</option>
-                                        <option value="Khoa học">Khoa học</option>
-                                        <option value="Giải trí">Giải trí</option>
-                                        <option value="Thể thao">Thể thao</option>
-                                        <option value="Giáo dục">Giáo dục</option>
-                                        <option value="Sức khỏe">Sức khỏe</option>
-                                        <option value="Đời sống">Đời sống</option>
+                                        <option value="all">Tất cả</option>
+                                        <option value="news">Thời sự</option>
+                                        <option value="world">Thế giới</option>
+                                        <option value="business">Kinh doanh</option>
+                                        <option value="law">Pháp luật</option>
+                                        <option value="science">Khoa học</option>
+                                        <option value="entertainment">Giải trí</option>
+                                        <option value="sport">Thể thao</option>
+                                        <option value="education">Giáo dục</option>
+                                        <option value="health">Sức khỏe</option>
+                                        <option value="life">Đời sống</option>
+                                        <option value="travel">Du lịch</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="newshub_searched_content">
-                                <ul class="searched_contents">
-                                    <li class="search_li">
-                                        <div class="search_content">
-                                                <h3><a class="business" href="#">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                                <p><a class="normal" href="#">Khi bạn cho thêm thuộc tính multiple, lúc này bạn có thể chọn nhiều mục. Các trình duyệt trên Destop hầu hết hiện thị khi có tùy chọn này là một listbox, số mục hiện thị trong hộp listbox thiết lập thông qua thuộc tính size</a></p>
-                                        </div>
-                                        <img src="./image/img_news/imgs_main/business_00.jpg" alt="">
-                                    </li>
-                                    <li class="search_li">
-                                        <div class="search_content">
-                                                <h3><a class="business" href="#">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                                <p><a class="normal" href="#">Khi bạn cho thêm thuộc tính multiple, lúc này bạn có thể chọn nhiều mục. Các trình duyệt trên Destop hầu hết hiện thị khi có tùy chọn này là một listbox, số mục hiện thị trong hộp listbox thiết lập thông qua thuộc tính size</a></p>
-                                        </div>
-                                        <img src="./image/img_news/imgs_main/business_00.jpg" alt="">
-                                    </li>
-                                    <li class="search_li">
-                                        <div class="search_content">
-                                                <h3><a class="business" href="#">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                                <p><a class="normal" href="#">Khi bạn cho thêm thuộc tính multiple, lúc này bạn có thể chọn nhiều mục. Các trình duyệt trên Destop hầu hết hiện thị khi có tùy chọn này là một listbox, số mục hiện thị trong hộp listbox thiết lập thông qua thuộc tính size</a></p>
-                                        </div>
-                                        <img src="./image/img_news/imgs_main/business_00.jpg" alt="">
-                                    </li>
-                                    <li class="search_li">
-                                        <div class="search_content">
-                                                <h3><a class="business" href="#">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                                <p><a class="normal" href="#">Khi bạn cho thêm thuộc tính multiple, lúc này bạn có thể chọn nhiều mục. Các trình duyệt trên Destop hầu hết hiện thị khi có tùy chọn này là một listbox, số mục hiện thị trong hộp listbox thiết lập thông qua thuộc tính size</a></p>
-                                        </div>
-                                        <img src="./image/img_news/imgs_main/business_00.jpg" alt="">
-                                    </li>
-                                    <li class="search_li">
-                                        <div class="search_content">
-                                                <h3><a class="business" href="#">Ông Tô Ân Xô và Trần Đăng Quỳnh làm trợ lý Tổng Bí thư, Chủ tịch nước Tô Lâm</a></h3>
-                                                <p><a class="normal" href="#">Khi bạn cho thêm thuộc tính multiple, lúc này bạn có thể chọn nhiều mục. Các trình duyệt trên Destop hầu hết hiện thị khi có tùy chọn này là một listbox, số mục hiện thị trong hộp listbox thiết lập thông qua thuộc tính size</a></p>
-                                        </div>
-                                        <img src="./image/img_news/imgs_main/business_00.jpg" alt="">
-                                    </li>
+                                <ul id="resultSearch" class="searched_contents">
+                                   <!--  -->
                                 </ul>
                             </div>
                          </div>
@@ -383,6 +350,7 @@
 
             <div class="newshub_footer_footer">&copy;2024 Bản quyền thuộc về NEWSHub</div>
         </footer>
+        <button class="goTop" id="goTopBtn"><i class="fa-solid fa-arrow-up"></i></button>
     </div>
 </body>
 </html>
