--- a/subject.html
+++ b/subject.html
@@ -327,6 +327,7 @@
 
             <div class="newshub_footer_footer">&copy;2024 Bản quyền thuộc về NEWSHub</div>
         </footer>
+        <button class="goTop" id="goTopBtn"><i class="fa-solid fa-arrow-up"></i></button>
     </div>
     <script src="./js/main.js" type="text/javascript"></script>
 </body>
